--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "harmony",
   "engines": {
-    "node": "20.x"
+    "node": "20.9.0"
   },
   "version": "0.1.0",
   "packageManager": "pnpm@8.6.0",
