--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "harmony",
-  "version": "1.0.0",
+  "engines": {
+    "node": "20"
+  },
+  "version": "0.1.0",
   "packageManager": "pnpm@8.6.0",
   "scripts": {
     "dev": "next dev",
@@ -26,6 +29,7 @@
     "react-konva": "^18.2.7",
     "react-konva-utils": "^1.0.4",
     "react-toastify": "^9.1.2",
+    "sonner": "^1.2.4",
     "typescript": "5.0.4",
     "uuid": "^9.0.0",
     "yup": "^1.1.1"
