--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "yup": "^1.1.1"
   },
   "devDependencies": {
-    "@pandacss/dev": "^0.20.1",
+    "@pandacss/dev": "0.32.1",
     "@types/node": "18.15.11",
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
