--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.2.2",
     "canvas": "2.11.2",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
