--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "canvas": "2.11.2",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "framer-motion": "^11.0.24",
     "jotai": "^2.0.4",
     "konva": "^9.0.1",
     "next": "13.3.0",
