--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^11.18.2",
     "jotai": "^2.12.4",
     "konva": "^9.3.20",
+    "lucide-react": "^0.525.0",
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
