--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "konva": "^9.3.20",
     "lucide-react": "^0.525.0",
     "next": "13.3.0",
+    "next-themes": "^0.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.56.3",
