--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
+    "axios": "^1.11.0",
     "canvas": "3.1.0",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
@@ -23,6 +24,7 @@
     "lucide-react": "^0.525.0",
     "next": "13.3.0",
     "next-themes": "^0.4.6",
+    "openai": "^5.12.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.56.3",
