--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jotai": "^2.12.4",
     "konva": "^9.3.20",
     "lucide-react": "^0.525.0",
+    "lucide-static": "^0.541.0",
     "next": "13.3.0",
     "next-themes": "^0.4.6",
     "openai": "^5.12.2",
