--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pixel-kit",
   "engines": {
-    "node": ">=22"
+    "node": ">=20"
   },
   "version": "0.2.0",
   "packageManager": "pnpm@8.6.0",
@@ -11,6 +11,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
+  },
+  "resolutions": {
+    "react-reconciler": "0.29.0"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.89.0",
@@ -27,8 +30,8 @@
     "next": "15.5.3",
     "next-themes": "0.4.6",
     "openai": "5.12.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-hook-form": "7.56.3",
     "react-konva": "18.2.10",
     "react-konva-utils": "1.1.0",
