--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pixel-kit",
   "engines": {
-    "node": ">=20"
+    "node": "22.x"
   },
   "version": "0.2.0",
   "packageManager": "pnpm@8.6.0",
