--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/react": "18.3.24",
     "@types/react-dom": "18.3.7",
     "@types/uuid": "9.0.8",
-    "prettier": "3.5.3"
+    "prettier": "3.5.3",
+    "@eslint/eslintrc": "^3"
   }
 }
