--- a/package.json
+++ b/package.json
@@ -16,17 +16,22 @@
     "react-reconciler": "0.29.0"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.32.2",
+    "@supabase/supabase-js": "^2.57.4",
     "@tanstack/react-query": "^5.89.0",
     "@vercel/analytics": "1.5.0",
     "axios": "1.11.0",
+    "bcrypt": "^6.0.0",
     "canvas": "3.1.0",
     "eslint": "8.38.0",
     "eslint-config-next": "15.5.3",
     "framer-motion": "11.18.2",
     "jotai": "2.12.4",
+    "jsonwebtoken": "^9.0.2",
     "konva": "9.3.20",
     "lucide-react": "0.525.0",
     "lucide-static": "0.541.0",
+    "mongoose": "^8.18.2",
     "next": "15.5.3",
     "next-themes": "0.4.6",
     "openai": "5.12.2",
@@ -41,12 +46,14 @@
     "uuid": "9.0.1"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
     "@pandacss/dev": "0.32.1",
+    "@types/bcrypt": "^6.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "24.5.2",
     "@types/react": "18.3.24",
     "@types/react-dom": "18.3.7",
     "@types/uuid": "9.0.8",
-    "prettier": "3.5.3",
-    "@eslint/eslintrc": "^3"
+    "prettier": "3.5.3"
   }
 }
