--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "canvas": "3.1.0",
     "eslint": "8.38.0",
     "eslint-config-next": "15.5.3",
+    "formik": "^2.4.6",
     "framer-motion": "11.18.2",
     "jotai": "2.12.4",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "konva": "9.3.20",
     "lucide-react": "0.525.0",
@@ -43,12 +45,14 @@
     "sonner": "1.2.4",
     "tsx": "4.19.4",
     "typescript": "5.0.4",
-    "uuid": "9.0.1"
+    "uuid": "9.0.1",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@pandacss/dev": "0.32.1",
     "@types/bcrypt": "^6.0.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "24.5.2",
     "@types/react": "18.3.24",
