--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "@clerk/nextjs": "^6.32.2",
     "@supabase/supabase-js": "^2.57.4",
     "@tanstack/react-query": "^5.89.0",
+    "@types/formidable": "^3.4.5",
     "@vercel/analytics": "1.5.0",
     "axios": "1.11.0",
     "bcrypt": "^6.0.0",
     "canvas": "3.1.0",
+    "cloudinary": "^2.7.0",
     "eslint": "8.38.0",
     "eslint-config-next": "15.5.3",
+    "formidable": "^3.5.4",
     "formik": "^2.4.6",
     "framer-motion": "11.18.2",
     "jotai": "2.12.4",
