--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "formik": "^2.4.6",
     "framer-motion": "11.18.2",
     "jotai": "2.12.4",
+    "jotai-tanstack-query": "^0.11.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "konva": "9.3.20",
