--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "6.33.3",
+    "@radix-ui/react-context-menu": "^2.2.16",
     "@radix-ui/react-dropdown-menu": "2.1.16",
     "@supabase/supabase-js": "2.74.0",
     "@tailwindcss/postcss": "4.1.14",
