--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@supabase/supabase-js": "2.74.0",
     "@tailwindcss/postcss": "4.1.14",
     "@tanstack/react-query": "5.90.2",
+    "@toon-format/toon": "^1.0.0",
     "@types/formidable": "3.4.5",
     "@vercel/analytics": "1.5.0",
     "axios": "1.11.0",
