--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "lucide-react": "0.525.0",
     "lucide-static": "0.541.0",
     "mongoose": "8.19.1",
-    "next": "15.5.3",
+    "next": "^15.5.7",
     "next-themes": "0.4.6",
     "openai": "5.12.2",
     "postcss": "8.5.6",
