--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
   },
   "dependencies": {
     "@clerk/nextjs": "6.33.3",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-context-menu": "^2.2.16",
     "@radix-ui/react-dropdown-menu": "2.1.16",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
     "@supabase/supabase-js": "2.74.0",
     "@tailwindcss/postcss": "4.1.14",
     "@tanstack/react-query": "5.90.2",
