--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "formidable": "3.5.4",
     "formik": "2.4.6",
     "framer-motion": "11.18.2",
+    "jose": "^6.1.3",
     "jotai": "2.12.4",
     "jotai-tanstack-query": "0.11.0",
     "js-cookie": "3.0.5",
