--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-switch": "^1.2.6",
     "@supabase/supabase-js": "2.74.0",
     "@tailwindcss/postcss": "4.1.14",
     "@tanstack/react-query": "5.90.2",
